--- a/unittable.lfm
+++ b/unittable.lfm
@@ -1,16 +1,16 @@
 object TableForm: TTableForm
-  Left = 399
-  Height = 239
-  Top = 208
-  Width = 439
-  Caption = 'TableForm'
-  ClientHeight = 239
-  ClientWidth = 439
+  Left = 504
+  Height = 320
+  Top = 238
+  Width = 480
+  Caption = 'GridForm'
+  ClientHeight = 320
+  ClientWidth = 480
   Constraints.MinHeight = 320
   Constraints.MinWidth = 480
+  OnActivate = FormActivate
   OnClose = FormClose
   LCLVersion = '1.2.4.0'
-  Visible = True
   object DBNavigator: TDBNavigator
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = DBGrid
@@ -18,9 +18,9 @@ object TableForm: TTableForm
     AnchorSideRight.Control = Owner
     AnchorSideBottom.Control = Owner
     AnchorSideBottom.Side = asrBottom
-    Left = 40
+    Left = -176
     Height = 31
-    Top = 200
+    Top = 281
     Width = 352
     Anchors = [akBottom]
     BevelOuter = bvNone
@@ -34,6 +34,7 @@ object TableForm: TTableForm
     ChildSizing.ControlsPerLine = 100
     ClientHeight = 31
     ClientWidth = 352
+    DataSource = DataSource
     Options = []
     TabOrder = 0
   end
@@ -44,9 +45,9 @@ object TableForm: TTableForm
     AnchorSideRight.Side = asrBottom
     AnchorSideBottom.Control = DBNavigator
     Left = 0
-    Height = 192
+    Height = 273
     Top = 0
-    Width = 439
+    Width = 480
     Anchors = [akTop, akLeft, akRight, akBottom]
     Color = clWindow
     Columns = <>
